crates/edgedb_macros/tests/ui/one_arg.stderr
error: expected `,`
 --> tests/ui/one_arg.rs:4:2
  |
4 |     edgedb_query!(example_module);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `edgedb_query` (in Nightly builds, run with -Z macro-backtrace for more info)
